--- a/Resources/views/Feature/explorer.html.twig
+++ b/Resources/views/Feature/explorer.html.twig
@@ -120,6 +120,12 @@
         history.replaceState(null, null, newSearch);
     }
 
+    function getCookie(name) {
+        var value = "; " + document.cookie;
+        var parts = value.split("; " + name + "=");
+        if (parts.length == 2) return parts.pop().split(";").shift();
+    }
+
     // Defines a GraphQL fetcher using the fetch API.
     function graphQLFetcher(graphQLParams) {
         var headers = {
@@ -129,6 +135,13 @@
         if (window.tokenInput) {
             headers['{{ tokenHeader }}'] = tokenInput.value;
         }
+
+        var cookie = getCookie('XSRF-TOKEN');
+
+        if (cookie != undefined) {
+            headers['X-XSRF-TOKEN'] = cookie;
+        }
+
         return fetch("{{ graphQLUrl }}", {
             method:      'post',
             headers:     headers,
@@ -158,6 +171,7 @@
             }),
             document.getElementById('graphiql')
     );
+
 </script>
 <script>
     var button     = document.querySelector('.token-button');
